--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,7 +8,13 @@
             <h1><a href="/">Darkside blog</a></h1>
         </header>
 
-        {{ posts }}
-        
+        {% for post in posts %}
+        <article>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+            <time>published: {{ post.published_date }}</time>
+        </article>
+        {% endfor %}
+
     </body>
 </html>
